<resources>
    <string name="app_name">Football Scores</string>
    <string name="score">Score</string>
    <string name="team_a_score">Team A </string>
    <string name="_0">0</string>
    <string name="add">Add</string>
    <string name="team_b_score">Team B</string>
    <string name="fouls">Fouls</string>
    <string name="team_a_fouls">Team A</string>
    <string name="team_b_fouls">Team B</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
</resources>
